# plat-plugins

./: .gitignore  Cargo.toml  DEVELOPMENT.md
identity/: plugin.json
identity/.storage/identity/: cKZamyRl2NScUMYM3xL1QV05Rt8jDirer1vqN6aBWJs=
identity/frontend/: package.json  pnpm-lock.yaml  vite.config.ts
identity/frontend/src/: App.tsx
identity/frontend/src/components/intial-provider/: index.tsx  typings.ts  use-initial.ts
identity/frontend/src/hooks/: use-current-identity.ts
identity/frontend/src/routes/: layout.tsx  page.tsx
identity/frontend/src/routes/components/: identity-card.tsx  identity-hero.tsx
identity/frontend/src/routes/components/control-bar/: control-item.tsx  index.tsx
identity/frontend/src/routes/components/header/: index.tsx
identity/frontend/src/routes/edit/: page.tsx
identity/frontend/src/routes/edit/components/: edit-item.tsx
identity/frontend/src/routes/hooks/: use-daemon-context.ts  use-identity.ts
identity/frontend/src/routes/intial/: page.tsx
identity/frontend/src/routes/intial/sections/: complete.tsx  form.tsx  typings.ts  welcome.tsx
identity/frontend/src/routes/intial/sections/components/: next-button.tsx  prev-button.tsx
identity/frontend/src/typings/: core.ts
identity/plugin/: Cargo.toml
identity/plugin/src/: bindings.rs  express  lib.rs  router  typings.rs
identity/plugin/src/identity/: model.rs
identity/plugin/src/methods/: find_one.rs  mod.rs
identity/plugin/src/router/: builder.rs  context.rs  mod.rs  response.rs  router.rs
identity/plugin/src/store/: model.rs
identity/plugin/src/utils/: http.rs  http_context.rs  mod.rs
identity/plugin/wit/: world.wit
message/: plugin.json
message/plugin/: Cargo.toml  README.md
message/plugin/src/: bindings.rs  lib.rs  router
message/plugin/src/models/: key_pair.rs  message.rs  mod.rs  operation.rs
plugin/: Cargo.toml
plugin/src/: bindings.rs  lib.rs
plugin/src/utils/: http.rs  mod.rs
plugin/wit/: world.wit
scripts/: init.mjs  package.json  plat-plugins.json
shared_utils/: Cargo.toml  README.md
shared_utils/src/: bindings.rs  lib.rs
shared_utils/src/router/: builder.rs  context.rs  mod.rs  router.rs
shared_utils/wit/: world.wit
web_tool/: Cargo.toml
web_tool/src/: bindings.rs  lib.rs
web_tool/src/express/: app.rs  mod.rs
web_tool/src/express/context/: mod.rs  request.rs  response.rs
web_tool/src/express/router/: mod.rs
web_tool/src/router/: builder.rs  context.rs  mod.rs  utils.rs
web_tool/wit/: world.wit
