[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { version = "0.30.0", features = ["bitflags"] }
anyhow = "1.0.86"
autosurgeon = "0.8.5"
automerge = "0.5.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "plat:plugin"

[package.metadata.component.dependencies]
