[package]
name = "web_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
mime_guess = "2.0.5"
wit-bindgen-rt = { version = "0.30.0", features = ["bitflags"] }

[lib]
crate-type = ["lib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "plat:identity"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:sockets" = { path = "wit/deps/sockets" }
