[package]
name = "message"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
base64 = "0.22.1"
mime_guess = "2.0.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
wit-bindgen-rt = { version = "0.30.0", features = ["bitflags"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "plat:plugin"

[package.metadata.component.dependencies]

[package.metadata.component.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
"wasi:clocks" = { path = "wit/deps/clocks" }
"wasi:io" = { path = "wit/deps/io" }
"wasi:random" = { path = "wit/deps/random" }
"wasi:cli" = { path = "wit/deps/cli" }
"wasi:filesystem" = { path = "wit/deps/filesystem" }
"wasi:sockets" = { path = "wit/deps/sockets" }
